--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,6 +22,7 @@
             </mat-card-actions>
         </mat-card>
     </form>
+    <app-register></app-register>
     <div *ngIf="this.storeService.getUser()">
     <mat-card >
         <mat-card-title>
