Add logo and ui improvements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,8 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary" class="position-fixed">
-      <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
-      <span>Race Stats for Dirt Rally 2.0 Rallycross</span>
+    <mat-toolbar color="primary" class="position-fixed top-toolbar mat-elevation-z5">
+      <img src="assets/logo-horizontal-toolbar.png" />
     </mat-toolbar>
     <div class="content">
       <router-outlet></router-outlet>
