--- a/src/app/components/best-laps/best-laps.component.scss
+++ b/src/app/components/best-laps/best-laps.component.scss
@@ -10,6 +10,8 @@
 
 .thirty {
   width: 33%;
+  display:flex;
+  align-items: center;
 }
 
 .mat-card {
@@ -27,4 +29,8 @@
 
 .lap-time {
   width:70%;
+}
+
+.flag {
+  margin-right: 5px;
 }
