--- a/src/app/components/races/races.component.scss
+++ b/src/app/components/races/races.component.scss
@@ -1,6 +1,6 @@
 .app-div {
-    margin-bottom: 18px;
-  }
+  margin-bottom: 70px;
+}
 
 .mat-card {
   margin-bottom: 18px;
@@ -17,4 +17,22 @@
 
 .lap-time {
   width:70%;
+}
+
+.race-info {
+  display: flex;
+  align-items: center;
+}
+
+.race-info-picto {
+  margin-right: 5px;
+}
+
+.footer {
+  background-color: #393939;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  position: fixed;
+  z-index: 10;
 }
