--- a/src/app/components/races/races.component.scss
+++ b/src/app/components/races/races.component.scss
@@ -11,17 +11,18 @@
   width: 100%;
 }
 
-.lap-number {
-  width:30%;
-}
-
-.lap-time {
-  width:70%;
+.fifty {
+  width:50%;
 }
 
 .race-info {
   display: flex;
   align-items: center;
+  font-size: 14px;
+}
+
+::ng-deep .mat-list-item-content {
+  width: 100%;
 }
 
 .race-info-picto {
@@ -35,4 +36,49 @@
   bottom: 0px;
   position: fixed;
   z-index: 10;
+}
+
+.flag {
+  margin-right: 5px;
+}
+
+.twenty {
+  width: 20%;
+  display:flex;
+  align-items: center;
+}
+
+.sixty {
+  width: 60%;
+  display:flex;
+  align-items: center;
+}
+
+.list-title {
+  width: 100%;
+  background-color: #393939;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+}
+
+.sub-title {
+  color: #a1a1a1;
+  line-height: 12px;
+  font-size: 12px;
+}
+
+.cell-middle {
+  display: flex;
+  justify-content: center;
+}
+
+.cell-right {
+  display: flex;
+  justify-content: flex-end;
 }
