--- a/src/app/components/races/races.component.html
+++ b/src/app/components/races/races.component.html
@@ -6,20 +6,18 @@
           <div class="lap-line">
             <div class="twenty">
               <div class="race-info">
-                <div class="race-info-picto"><mat-icon aria-hidden="false" aria-label="Example home icon">date_range</mat-icon></div>
                 <div>{{ race.created_at | date:'d/MM/y HH:mm' }}</div>
               </div>
             </div>
             <div class="sixty cell-middle">
               <div class="list-title-content">
                 <div class="title">{{ race.position == 1 ? race.position+'er' : race.position+'ème' }} <img src="assets/flags/{{ race.country }}.png" class="flag" />{{ race.name }}</div>
-                <div class="sub-title">{{ race.length | number }} m ({{ race.asphalt }}% asphalt et {{ race.gravel }}% gravel)</div>
+                <div class="sub-title">{{ race.length | number }} m ({{ race.asphalt }}% asphalt / {{ race.gravel }}% gravel)</div>
               </div>
             </div>
             <div class="twenty cell-right">
               <div class="race-info">
                 <div>{{ race.time }}</div>
-                <div class="race-info-picto"><mat-icon aria-hidden="false" aria-label="Example home icon">timer</mat-icon></div>
               </div>
             </div>
           </div>
@@ -27,7 +25,7 @@
         <mat-list-item *ngFor="let lap of race.laps;let i = index" [class.alt-line]="i%2 == 1">
           <div class="lap-line">
             <div class="fifty">
-              Tour {{ lap.lap +1 }}
+              Lap {{ lap.lap +1 }}
             </div>
             <div class="fifty lap-time">
               {{ lap.time | number }}
@@ -35,16 +33,6 @@
           </div>
           <mat-divider></mat-divider>
         </mat-list-item>
-        <!--<mat-list-item class="last-line">
-          <div class="lap-line">
-            <div class="lap-number">
-             <b>Total</b>
-            </div>
-            <div class="lap-time">
-              <b>{{ race.time }}</b>
-            </div>
-          </div>
-        </mat-list-item>-->
         </mat-list>
     </mat-card-content>
   </mat-card>
