--- a/src/app/components/races/races.component.scss
+++ b/src/app/components/races/races.component.scss
@@ -9,6 +9,7 @@
 .lap-line {
   display: flex;
   width: 100%;
+  font-size: 12px;
 }
 
 .flag {
@@ -23,7 +24,7 @@
 .race-info {
   display: flex;
   align-items: center;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 ::ng-deep .mat-list-item-content {
@@ -32,6 +33,7 @@
 
 .race-info-picto {
   margin-right: 5px;
+  font-size: 12px;
 }
 
 .footer {
@@ -70,12 +72,14 @@
 .title {
   display: flex;
   justify-content: center;
+  font-size: 16px;
 }
 
 .sub-title {
   color: #a1a1a1;
   line-height: 12px;
   font-size: 12px;
+  text-align: center;
 }
 
 .cell-middle {
