Change date format

--- a/src/app/components/races/races.component.html
+++ b/src/app/components/races/races.component.html
@@ -6,7 +6,7 @@
           <div class="lap-line">
             <div class="twenty">
               <div class="race-info">
-                <div>{{ race.created_at | date:'d/MM/y HH:mm' }}</div>
+                <div>{{ race.created_at | date:'y/MM/d HH:mm' }}</div>
               </div>
             </div>
             <div class="sixty cell-middle">
