Improve best laps UI

--- a/src/app/components/best-laps/best-laps.component.scss
+++ b/src/app/components/best-laps/best-laps.component.scss
@@ -24,6 +24,21 @@
   font-size: 12px;
 }
 
+.diff {
+  font-size: 10px;
+  color: #e9e22e;
+}
+
+.best-lap {
+  font-size: 14px;
+  font-weight: 500;
+  color: #ffffff;
+}
+
+.trophy {
+  margin-right: 5px;
+}
+
 .lap-number {
   width:30%;
 }
