--- a/src/app/components/best-laps/best-laps.component.html
+++ b/src/app/components/best-laps/best-laps.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-12 col-lg-6 col-xl-6">
       <mat-list>
         <mat-list-item class="list-title">
-          <div>Personnal best laps</div>
+          <div>My best laps</div>
         </mat-list-item>
         <mat-list-item *ngFor="let lap of this.personnalBestLaps;let i = index" [class.alt-line]="i%2 == 1">
           <div class="lap-line">
@@ -11,11 +11,11 @@
               <img src="assets/flags/{{ lap.country }}.png" class="flag" />{{ lap.name }}
             </div>
             <div class="thirty cell-middle">
-              <img src="assets/flags/{{lap.user_country}}.png" class="flag" />
               {{ lap.nickname }}
             </div>
             <div class="thirty cell-right">
-              <span>{{ lap.time }}</span>
+              <span *ngIf="lap.time > lap.best_time">{{ lap.time | number:'1.3-3'}}<br /><span class="diff" >+{{ lap.time - lap.best_time | number:'1.3-4' }}</span></span>
+              <span *ngIf="lap.time <= lap.best_time"><img src="assets/icons/trophy.svg" class="trophy"><span class="best-lap">{{ lap.time | number:'1.3-3'}}</span></span>
             </div>
           </div>
           <mat-divider></mat-divider>
@@ -25,7 +25,7 @@
     <div class="col-md-12 col-lg-6 col-xl-6">
       <mat-list>
         <mat-list-item class="list-title">
-          <div>Best laps</div>
+          <div>Track record</div>
         </mat-list-item>
         <mat-list-item *ngFor="let lap of this.bestLaps;let i = index" [class.alt-line]="i%2 == 1">
           <div class="lap-line">
@@ -33,11 +33,10 @@
               <img src="assets/flags/{{ lap.country }}.png" class="flag" />{{ lap.name }}
             </div>
             <div class="thirty cell-middle">
-              <img src="assets/flags/{{lap.user_country}}.png" class="flag" />
               {{ lap.nickname }}
             </div>
             <div class="thirty cell-right">
-              <span>{{ lap.time }}</span>
+              <span>{{ lap.time | number:'1.3-3' }}</span>
             </div>
           </div>
           <mat-divider></mat-divider>
