--- a/src/app/components/track-best-laps/track-best-laps.component.scss
+++ b/src/app/components/track-best-laps/track-best-laps.component.scss
@@ -6,3 +6,11 @@
 .mat-card {
   margin-bottom: 15px;
 }
+
+.list-title {
+  width: 100%;
+  background-color: #393939;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+}
