--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,36 @@
 <mat-sidenav-container>
-  <mat-sidenav #drawer fixedInViewport="true" [opened]="false">
-    <mat-toolbar color="primary">Menu</mat-toolbar>
+  <mat-sidenav #drawer fixedInViewport="true" [opened]="drawer.opened" hasBackdrop="false" mode="push" position="end">
+    <mat-toolbar color="primary" class="menu-right">
+      <div class="menu-text">Menu</div>
+      <div>
+      <button mat-icon-button aria-label="Main menu" (click)="drawer.toggle()" >
+        <mat-icon>menu</mat-icon>
+      </button>
+    </div>
+    </mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">ITEM1</a>
-      <a mat-list-item href="#">ITEM2</a>
-      <a mat-list-item href="#">ITEM3</a>
-      <a mat-list-item href="#">ITEM4</a>
+      <mat-list-item >
+        <mat-icon>insert_chart_outlined</mat-icon>
+        <a href="#">Dashboard</a>
+      </mat-list-item>
+      <mat-list-item class="menu-right">
+        <mat-icon>list</mat-icon>
+        <a href="#">Track ranking</a>
+      </mat-list-item>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary" class="position-fixed top-toolbar mat-elevation-z5">
-      <img src="assets/logo-horizontal-toolbar.png" />
+      <div class="toolbar-inside">
+        <div class="toolbar-logo">
+          <img src="assets/logo-horizontal-toolbar.png" />
+        </div>
+        <div class="toolbar-button">
+          <button *ngIf="!drawer.opened"  mat-icon-button aria-label="Main menu" (click)="drawer.toggle()" class="menu-button" >
+            <mat-icon>menu</mat-icon>
+          </button>
+        </div>
+      </div>
     </mat-toolbar>
     <div class="content">
       <router-outlet></router-outlet>
