Add basic i18n support and add partial french translation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,11 @@
     <mat-nav-list>
       <mat-list-item >
         <mat-icon>insert_chart_outlined</mat-icon>
-        <a href="#">Dashboard</a>
+        <a href="#" i18n="Menu | Dashboard">Dashboard</a>
       </mat-list-item>
       <mat-list-item class="menu-right">
         <mat-icon>list</mat-icon>
-        <a href="#">Track ranking</a>
+        <a href="#" i18n="Menu | Ranking">Track ranking</a>
       </mat-list-item>
     </mat-nav-list>
   </mat-sidenav>
