--- a/src/app/components/best-laps/best-laps.component.html
+++ b/src/app/components/best-laps/best-laps.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-12 col-lg-6 col-xl-6">
       <mat-list>
         <mat-list-item class="list-title">
-          <div>My best laps</div>
+          <div><span i18n="My best laps | Title">My best laps</span></div>
         </mat-list-item>
         <mat-list-item *ngFor="let lap of this.personnalBestLaps;let i = index" [class.alt-line]="i%2 == 1">
           <div class="lap-line">
@@ -25,7 +25,7 @@
     <div class="col-md-12 col-lg-6 col-xl-6">
       <mat-list>
         <mat-list-item class="list-title">
-          <div>Track record</div>
+          <div><span i18n="My best laps | Tracks records">Tracks records</span></div>
         </mat-list-item>
         <mat-list-item *ngFor="let lap of this.bestLaps;let i = index" [class.alt-line]="i%2 == 1">
           <div class="lap-line">
