--- a/src/app/components/races/races.component.html
+++ b/src/app/components/races/races.component.html
@@ -12,7 +12,7 @@
             <div class="sixty cell-middle">
               <div class="list-title-content">
                 <div class="title">{{ race.position == 1 ? race.position+'er' : race.position+'ème' }} <img src="assets/flags/{{ race.country }}.png" class="flag" />{{ race.name }}</div>
-                <div class="sub-title">{{ race.length | number }}m ({{ race.asphalt }}% asphalt / {{ race.gravel }}% gravel)</div>
+                <div class="sub-title">{{ race.length | number }}m ({{ race.asphalt }}% <span i18n="Races | Asphalt">asphalt</span> / {{ race.gravel }}% <span i18n="Races | Asphalt">gravel</span>)</div>
               </div>
             </div>
             <div class="twenty cell-right">
@@ -25,7 +25,7 @@
         <mat-list-item *ngFor="let lap of race.laps;let i = index" [class.alt-line]="i%2 == 1">
           <div class="lap-line">
             <div class="fifty">
-              Lap {{ lap.lap +1 }}
+              <span i18n="Races | Lap">Lap</span> {{ lap.lap +1 }}
             </div>
             <div class="fifty lap-time">
               {{ lap.time | number }}
