--- a/src/app/components/races/races.component.html
+++ b/src/app/components/races/races.component.html
@@ -28,7 +28,7 @@
               <span i18n="Races | Lap">Lap</span> {{ lap.lap +1 }}
             </div>
             <div class="fifty lap-time">
-              {{ lap.time | number }}
+              {{ lap.time | number:'1.3-3' }}
             </div>
           </div>
           <mat-divider></mat-divider>
