--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -114,14 +114,16 @@
                                 <span>{{ j + 1 }}</span>
                             </div>
                             <div class="round-pilot">
+                                <div class="pilot-name">
                                 {{ pilot.pilot }}
+                            </div>
                             </div>
                             <div class="round-time">
                                 {{ pilot.formated_time }}<br />
                                 <div *ngIf="pilot.penalty != 0">+{{ pilot.penalty }}</div>
                             </div>
                             <div *ngFor="let lap of pilot.laps" class="round-lap">
-                                {{ lap.time }}
+                                <div class="lap-value">{{ lap.time | number:'1.3-3' }}</div>
                             </div>
                         </div>
                         <mat-divider></mat-divider>
