Rework HP + minor css fix

--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -35,7 +35,7 @@
                         </div>
                         <mat-list>
                             <mat-list-item class="alt-line">
-                                <div class="track-line">
+                                <div class="user-line">
                                     <div class="cell-50p">
                                         <span i18n="User | Total laps">Total laps</span>
                                     </div>
@@ -46,7 +46,7 @@
                                 <mat-divider></mat-divider>
                             </mat-list-item>
                             <mat-list-item>
-                                <div class="track-line">
+                                <div class="user-line">
                                     <div class="cell-50p">
                                         <span i18n="User | Total races">Total races</span>
                                     </div>
@@ -57,7 +57,7 @@
                                 <mat-divider></mat-divider>
                             </mat-list-item>
                             <mat-list-item class="alt-line">
-                                <div class="track-line">
+                                <div class="user-line">
                                     <div class="cell-50p">
                                         <span i18n="User | Victories">Victories</span>
                                     </div>
@@ -68,7 +68,7 @@
                                 <mat-divider></mat-divider>
                             </mat-list-item>
                             <mat-list-item>
-                                <div class="track-line">
+                                <div class="user-line">
                                     <div class="cell-50p">
                                         <span i18n="User | Podiums">Podiums</span>
                                     </div>
@@ -79,7 +79,7 @@
                                 <mat-divider></mat-divider>
                             </mat-list-item>
                             <mat-list-item class="alt-line">
-                                <div class="track-line">
+                                <div class="user-line">
                                     <div class="cell-50p">
                                         <span i18n="User | Race time">Race time</span>
                                     </div>
