--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -101,6 +101,14 @@
     align-items: center;
   }
 
+  .user-line {
+    display: flex;
+    width: 100%;
+    font-size: 18px;
+    font-weight: 500;
+    align-items: center;
+  }
+
   .cell-50p {
     width: 50%;
   }
