--- a/src/app/components/races/races.component.html
+++ b/src/app/components/races/races.component.html
@@ -39,11 +39,11 @@
 
 
 </div>
-<div class="footer">
+<!--<div class="footer">
   <mat-paginator [length]="50" [pageSizeOptions]="[50, 100, 250]" >
   </mat-paginator>
 </div>
-<!--(page)="onPageChanged($event)"
+(page)="onPageChanged($event)"
     <mat-card>
       <mat-card-title>Circuit Rallycross</mat-card-title>
       <mat-card-subtitle>longueur 1 149 m - (60% bitume et 40% off-road)</mat-card-subtitle>
