--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -117,5 +117,5 @@
             </div>
         </mat-card-content>
     </mat-card>
-    <app-tracks [userId]="user.id"></app-tracks>
+    <!--<app-tracks [userId]="user.id"></app-tracks>-->
 </div>
