--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,10 @@
 .position-fixed{
     position: fixed;
     z-index: 1000;
+    height: 60px;
   }
   .content {
-    margin-top: 70px;
+    margin-top: 60px;
   }
 
 .top-toolbar {
