--- a/src/app/components/tracks/tracks.component.html
+++ b/src/app/components/tracks/tracks.component.html
@@ -1,12 +1,8 @@
-
-        <mat-tab-group>
-            <mat-tab label="All">
-                <app-races trackId="0" [userId]="userId"></app-races>
-            </mat-tab>
-            <mat-tab *ngFor="let track of tracks" [label]="track.name">
-                <ng-template matTabContent>
-                    <app-track-best-laps [trackId]="track.id" [userId]="userId"></app-track-best-laps>
-                    <app-races [trackId]="track.id" [userId]="userId"></app-races>
-                </ng-template>
-            </mat-tab>
-          </mat-tab-group>
+<mat-tab-group>
+    <mat-tab *ngFor="let track of tracks" [label]="track.name">
+        <ng-template matTabContent>
+            <app-track-best-laps [trackId]="track.id" [userId]="userId"></app-track-best-laps>
+            <!--<app-races [trackId]="track.id" [userId]="userId"></app-races>-->
+        </ng-template>
+    </mat-tab>
+</mat-tab-group>
