--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
     <mat-card class="mt-10">
         <mat-card-content class="home-intro">
                 <p>Race Stats is free and open source tools created to track your performance on RX sim. It currently supports Dirt Rally 2.0 (Rallycross mode).</p>
-                <p>Get all lap times history, compare with other pilots, create teams and competitons to race with with friends.</p>
+                <p>Get all lap times history, compare with other pilots, create teams and competitons to race with your friends.</p>
                 <p>HOW DOES IT WORK ?</p>
                 <mat-list>
                     <mat-list-item>
