--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
     <mat-toolbar color="primary" class="position-fixed top-toolbar mat-elevation-z5">
       <div class="toolbar-inside">
         <div class="toolbar-logo">
-          <img src="assets/logo-horizontal-toolbar.png" />
+          <img src="assets/rsrx.png" />
         </div>
         <div class="toolbar-button">
           <button *ngIf="!drawer.opened"  mat-icon-button aria-label="Main menu" (click)="drawer.toggle()" class="menu-button" >
