Add navigation service to display dynamic page title in top toolbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,7 @@
         <div class="toolbar-logo">
           <img src="assets/rsrx.png" />
         </div>
+        <div class="toolbar-title"><h1>{{ pageTitle }}</h1></div>
         <div class="toolbar-button">
           <button *ngIf="!drawer.opened"  mat-icon-button aria-label="Main menu" (click)="drawer.toggle()" class="menu-button" >
             <mat-icon>menu</mat-icon>
