Minor UI adjustments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
     <mat-toolbar color="primary" class="position-fixed top-toolbar mat-elevation-z5">
       <div class="toolbar-inside">
         <div class="toolbar-logo">
-          <img src="assets/rsrx.png" />
+          <a href="/"><img src="assets/rsrx.png" /></a>
         </div>
         <div class="toolbar-title"><h1>{{ pageTitle }}</h1></div>
         <div class="toolbar-button">
