--- a/src/app/components/track-best-laps/track-best-laps.component.scss
+++ b/src/app/components/track-best-laps/track-best-laps.component.scss
@@ -3,9 +3,11 @@
     margin-right: 18px;
     margin-top: 18px;
   }
+
 .mat-card {
-  margin-bottom: 15px;
+  margin: 15px;
 }
+
 .track-banner-container {
   padding-left:15px;
   padding-right: 15px;
