--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,4 +1,4 @@
-<div class="app-div" *ngIf="user">
+<div *ngIf="user">
     <mat-card>
         <mat-card-content>
             <div class="container-fluid">
